ui-v2 aside fix gap caused by overflow-y: auto
overflow-y: auto rule on aside/nav caused a gap to appear between the
side nav bar and top-nav entity selection bar.

This rule also caused aside menu icons to have more space on the left
than on the right.

Changing the overflow value to visible fixes both of these problems.

--- a/resources/assets/css/inner/aside.less
+++ b/resources/assets/css/inner/aside.less
@@ -29,7 +29,7 @@
   width: @aside_nav_width;
   background: @blueDarkest;
   color: fade(@white, 66);
-  overflow-y: auto;
+  overflow: visible;
 
   // Because this div can include elements which stretch across the top and the
   // side of the page, it tends to cover the page. Therefore, we need to make it
